fix(channels): Align channel icon for the currently selected outbound channel (#2295)
* Align channel icon for the currently selected outbound channel

* Use flex to align the currently selected channel icon

--- a/src/pages/tickets/detail/components/ReplyArea/ChannelSelect.less
+++ b/src/pages/tickets/detail/components/ReplyArea/ChannelSelect.less
@@ -1,9 +1,23 @@
-:local .dropdownToggle {
-    padding: 0;
-    background: transparent;
-    color: var(--neutral-grey-6);
+:local {
+    .container {
+        display: flex;
+        align-items: center;
+        height: 27px;
+    }
 
-    &:after {
-        margin-left: 4px;
+    .dropdownToggle {
+        display: flex;
+        align-items: center;
+        padding: 0;
+        background: transparent;
+        color: var(--neutral-grey-6);
+        &:after {
+            margin-left: 4px;
+        }
+    }
+
+    .newChannelIcon {
+        width: 17px;
+        height: 17px;
     }
 }
